# traffic-fine-sim

./: .gitignore  CLAUDE.md  README.md  app.py  model.py  optimization.py  pyproject.toml  requirements-freeze.txt  setup.py  test_policyengine_memory.py  test_simple_memory.py  utility_explorer.py  utils.py  visualization.py
.beads/: issues.jsonl
.github/workflows/: ci.yml  deploy-book.yml
paper/: 01_introduction.md  02_literature.md  02_literature_review.md  03_model.md  03_theoretical_model.md  04_calibration.md  04_simulation_methodology.md  04b_policyengine_calibration.md  05_results.ipynb  05_results.md  05_results_policyengine.ipynb  06_discussion.md  07_conclusion.md  08_broader_implications.md  Makefile  _config.yml  _toc.yml  appendix_code.md  appendix_robustness.md  index.md  journal_submission.md  kaila_re_review.md  myst.yml  parry_round3_assessment.md  references.bib  requirements.txt  saez_round3_assessment.md  simulated_referee_reports.md  stantcheva_rereview.md  stantcheva_round4_assessment.md
scripts/: generate_cps_data.py
src/traffic_fines/: config.py  cps_data.py  evidence.py  model.py  montecarlo.py  pipeline.py  welfare.py
tests/: __init__.py  test_agent.py  test_config.py  test_cps_data.py  test_evidence.py  test_fines.py  test_model.py  test_montecarlo.py  test_optimizer.py  test_parameters.py  test_pipeline.py  test_policyengine.py  test_society.py  test_welfare.py
traffic_fines/: __init__.py
traffic_fines/core/: __init__.py  agent.py  counterfactual.py  fines.py  optimizer.py  society.py
traffic_fines/data/: __init__.py  policyengine.py
traffic_fines/utils/: __init__.py  analysis.py  income_generation.py  parameters.py
(+6 files in other folders)
